Fixed Signup
Signup no longer covers the dropdown

--- a/Front-end/goodgreek/src/css/SignUp.css
+++ b/Front-end/goodgreek/src/css/SignUp.css
@@ -4,6 +4,5 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     width: 300px;
     margin: 0 auto;
-    z-index: 0;
     background-color: white; 
 }
